--- a/style.css
+++ b/style.css
@@ -10,14 +10,12 @@ html{
     max-width: 1280px;
 }
 
-body{
-    
-}
+
 h1{
     font-size: 1.8rem;
     color: #F2AF5C;
     text-indent: 1em;
-
+    display:inline;
 
 }
 h2{
@@ -58,6 +56,7 @@ header{
     text-align: center;    
     background-color:#0d1111;
     width: 100%;
+    color:#2966c2;
 }
 
 *[role = banner] > h2, *[role = banner] > h1{
@@ -68,6 +67,11 @@ header{
     display:none;
 }
 aside{
+    float:left;
+    position:absolute;
+    top:560px;
+    left:90%;
+    padding: 0, 2%;
     ul{
         list-style-type: none;
         line-height: 1em;
@@ -93,4 +97,17 @@ aside{
 
 .intro{
     height: 550px;
+}
+
+footer{
+    color:rgb(6, 168, 14);
+    padding:4%;
+    background-color: #011d1d;
+}
+footer > a{
+    display:block;
+    border-radius: 2px;
+    border-style: solid;    
+    border-color: #000;
+    padding:0.5em
 }
