--- a/style.css
+++ b/style.css
@@ -6,8 +6,13 @@ html,body{
     
 }
 html{
-    width: 80%;
+    width: 100%;
     max-width: 1280px;
+}
+body{
+
+    margin: auto;
+    margin: 15%;
 }
 
 
@@ -39,17 +44,31 @@ p{
     line-height: 1.5;
 
 }
+.explanation p:first-of-type::first-letter{
+    font-size:300%;
+    float: left;
+    font-family: 'Times New Roman';
+}
 .summary{
     text-align: center;
     padding-top: 0px;
 }
 a{
-    color:#2966c2
+    color:#2966c2;
+    font-weight:bold;
+}
+a:hover{
+    
+    color:#ff0d0d;
+}
+a:visited{
+    color:#111d1d;
+    font-weight: normal;
 }
 
 .summary, .main{
     position: relative;
-    background-color:#111d1d
+    background-color:#111d1d;
 }
 
 header{
@@ -66,12 +85,11 @@ header{
 #design-archives{
     display:none;
 }
-aside{
-    float:left;
-    position:absolute;
-    top:560px;
-    left:90%;
-    padding: 0, 2%;
+.design-selection{
+    position: absolute;
+    top: 560px;
+    left: 55%;
+    padding:2px;
     ul{
         list-style-type: none;
         line-height: 1em;
@@ -82,17 +100,10 @@ aside{
 }
 
 .explanation{
-    width:60%;
+    width:50%;
     margin-right: 35%;
-    border-right: solid, 1px, #000;
+    border-right: 2px solid ;
     padding:2%;
-}
-.design-selection{
-    position: absolute;
-    top: 560px;
-    left: 70%;
-    padding:2px;
-
 }
 
 .intro{
@@ -111,3 +122,10 @@ footer > a{
     border-color: #000;
     padding:0.5em
 }
+
+li:last-child{
+    border-bottom: #000 solid 2px;
+    padding-bottom: 10px;
+}
+
+
