--- a/style.css
+++ b/style.css
@@ -125,7 +125,10 @@ footer > a{
 
 li:last-child{
     border-bottom: #000 solid 2px;
-    padding-bottom: 10px;
 }
-
+li{
+    border-bottom: #000 solid 2px;
+    padding-top: 5px;
+    padding-bottom: 5px;;
+}
 
