--- a/style.css
+++ b/style.css
@@ -1,18 +1,12 @@
-*{
-    font-family: sans-serif;
-}
-html,body{
-    background-color: #091414;
-    
-}
-html{
-    width: 100%;
-    max-width: 1280px;
-}
-body{
 
+body{
+    background-color: #091414;
+    color: #111d1d;
     margin: auto;
     margin: 15%;
+    width: 70%;
+    height: 99.9%;
+    font-family: sans-serif;
 }
 
 
@@ -24,9 +18,11 @@ h1{
 
 }
 h2{
-     font-size: 1.4rem;
+    font-size: 1.4rem;
     color: #4F8C5E;
+    margin-right: 1em;
     background-color:rgb(15, 12, 12);
+    text-indent: 2em;
 }
 h3{
     background-color: rgb(15, 12, 12);
@@ -34,14 +30,14 @@ h3{
     color: #4F8C5E; 
 }
 abbr{
-    font-family: small-caps;
+    font-variant: small-caps;
 }
 p{
     text-indent: 1em;
     color: #D93232;
 }
-.main{
-    line-height: 1.5;
+.main p{
+    line-height: 24px;
 
 }
 .explanation p:first-of-type::first-letter{
@@ -55,7 +51,7 @@ p{
 }
 a{
     color:#2966c2;
-    font-weight:bold;
+    font-weight:bo6pxld;
 }
 a:hover{
     
@@ -90,47 +86,59 @@ header{
     top: 560px;
     left: 55%;
     padding:2px;
-    ul{
-        list-style-type: none;
-        line-height: 1em;
-    }
 }
 .page-wrapper{
     position: relative;
+    max-width: 1280px;
+    width: 80%;
+
 }
 
 .explanation{
-    width:50%;
+    width:60%;
     margin-right: 35%;
-    border-right: 2px solid ;
-    padding:2%;
+    border-right: 1px solid #1f295c ;
+    padding-right:2%;
 }
 
 .intro{
     height: 550px;
 }
 
-.main > footer{
+footer{
+
+    margin:4%;
+}
+main footer{
     color:rgb(6, 168, 14);
-    padding:4%;
     background-color: #011d1d;
 }
-.main > footer > a{
-    display:flex;
-    justify-content: center;
+footer a{ 
+    
     border-radius: 2px;
     border-style: solid;    
     border-color: #000;
     padding:0.5em
 }
+.main footer a{
+    display:flex;
+    justify-content: center;
+}
+
+aside ul{
+    list-style: none;
+    line-height: 1em;
+}
 
 li:last-child{
     border-bottom: #000 solid 2px;
 }
-li{
+aside li{
     border-bottom: #000 solid 2px;
     padding-top: 5px;
     padding-bottom: 5px;;
+    text-align: center;
+    margin-bottom: 1em;
 }
 
 .benefits{
