--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ p{
 }
 a{
     color:#2966c2;
-    font-weight:bo6pxld;
+    font-weight: 700;
 }
 a:hover{
     
@@ -82,11 +82,13 @@ header{
     display:none;
     position: absolute;
 }
+
 .design-selection{
     position: absolute;
+    float: left;
     top: 560px;
-    left: 55%;
-    padding:2px;
+    left: 62%;
+    padding: 0, 2%;
 }
 
 .design-selection li{
@@ -146,11 +148,30 @@ aside ul{
 aside li{
     border-bottom: #000000 solid 2px;
     padding-top: 5px;
-    padding-bottom: 5px;;
+    padding-bottom: 5px;
     text-align: center;
     margin-bottom: 1em;
+    border-top:solid 1px;
+
 }
 
+.design-selection > li{
+    border-bottom: #000000 solid 2px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+    margin-bottom: 1em;
+    border-top:solid 1px;
+
+}
+
+li:last-child{
+    border-bottom: solid 1px;
+}
+
+.design-selection > li:last-child{
+    border-bottom: solid 1px;
+}
 .benefits{
     display: flex;
     flex-direction: row-reverse;
@@ -177,6 +198,13 @@ aside li{
 }
 
 @media screen and (max-width: 768px) {
+    .design-selection{
+        float: none;
+        position: static;
+        top: 560px;
+        left: 62%;
+        padding: 0, 2%;
+    }
     .explanation{
         border-left: none;
         border-right: none;
